fixed overflow in features (#16)

--- a/angular/src/app/components/index/index.component.css
+++ b/angular/src/app/components/index/index.component.css
@@ -87,6 +87,8 @@ article {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .design-image-wrapper {
